@@ -1,7 +1,7 @@
 /****************************************
 *  Computer Algebra System SINGULAR     *
 ****************************************/
-/* $Id: ffields.cc,v 1.12 1998-04-21 10:48:56 obachman Exp $ */
+/* $Id: ffields.cc,v 1.13 1998-05-14 10:02:31 Singular Exp $ */
 /*
 * ABSTRACT: finite fields with a none-prime number of elements (via tables)
 */
@@ -625,7 +625,7 @@ void nfSetChar(int c, char **param)
     if (fp==NULL)
     {
       sprintf(buf,"../gftables/%d",nfCharQ);
-      fp = feFopen(buf,"r",NULL,TRUE);
+      fp = feFopen(buf,"r",NULL,FALSE);
       if (fp == NULL)
       {
         Werror("cannot find gftables/%d", nfCharQ);
